Fixed a few issues in dark mode

--- a/documentation/source/_static/css/custom09.css
+++ b/documentation/source/_static/css/custom09.css
@@ -22,6 +22,11 @@ html[data-theme="dark"] {
   --pst-color-plot-background: rgb(218, 219, 220);
 }
 
+html[data-theme="dark"] .bd-content img:not(.only-dark, .only-light) {
+  background-color: transparent !important;
+  border-radius: 0 !important;
+}
+
 /* PyDataSphinx link underlining overide */
 .bd-header .navbar-nav li a.nav-link:hover {
   text-decoration: none !important;
